--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "WhatsAsenaDuplicated",
-  "version": "1.3.6",
-  "description": "WhatsAsena project - a Whatsapp userbot helping to improve your Whatsapp experience.",
+  "name": "Snowy",
+  "version": "1.0",
+  "description": "Snowy project - a Whatsapp userbot helping to improve your Whatsapp experience.",
   "main": "./WhatsAsenaDuplicated/bot.js",
   "scripts": {
     "start": "supervisor -s bot.js"
