--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "whatsapp",
     "bot",
     "ai",
-    "asena",
+    "Snowy",
     "api",
     "unlimited",
     "asenadev",
@@ -24,7 +24,7 @@
     "whatsapp api",
     "WhatsAsena"
   ],
-  "author": "AsenaDev / Yusuf Usta",
+  "author": "Zeus / Hades /Poseidon",
   "developer": "AsenaDev / @phaticusthiccy",
   "license": "GPL-3.0-or-later",
   "bugs": {
